--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
+    id 'org.javamodularity.moduleplugin' version '1.8.9'
     id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.beryx.jlink' version '2.24.1'
+    id "org.beryx.jlink" version "2.24.1"
+
+    id 'org.jetbrains.kotlin.jvm' version '1.6.20'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'br.andrew'
