--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.9'
     id 'org.openjfx.javafxplugin' version '0.0.10'
-    id "org.beryx.jlink" version "2.24.1"
+    id "org.beryx.jlink" version "2.26.0"
 
     id 'org.jetbrains.kotlin.jvm' version '1.6.20'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
@@ -44,8 +44,8 @@ javafx {
 }
 
 dependencies {
-    implementation("org.openjfx:javafx-controls:18.0.1")
-    implementation("org.openjfx:javafx-fxml:18.0.1")
+    implementation("org.openjfx:javafx-controls:17.0.2")
+    implementation("org.openjfx:javafx-fxml:17.0.2")
     implementation 'io.github.palexdev:materialfx:11.13.9'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
@@ -57,11 +57,17 @@ test {
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/file2web-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug','--compress', '2', '--no-header-files', '--no-man-pages']
+    targetPlatform("win") {
+        jdkHome = jdkDownload("https://download2.gluonhq.com/openjfx/19.0.2.1/openjfx-19.0.2.1_windows-x64_bin-sdk.zip")
+//        jdkHome = jdkDownload("https://download2.gluonhq.com/openjfx/19.0.2.1/openjfx-19.0.2.1_windows-x64_bin-jmods.zip")
+        addExtraModulePath("/usr/lib/openjfx/win/jmods")
+    }
     launcher {
-        name = 'app'
+        name = 'File2Web'
     }
 }
+
 
 jlinkZip {
     group = 'distribution'
