--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
+
 plugins {
     id 'java'
     id 'application'
     id 'org.javamodularity.moduleplugin' version '1.8.9'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+
     id "org.beryx.jlink" version "2.26.0"
+
+//    id "org.panteleyev.jpackageplugin" version "1.5.1"
+
 
     id 'org.jetbrains.kotlin.jvm' version '1.6.20'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
@@ -32,6 +37,12 @@ application {
     mainClass = 'br.andrew.cnabworker.StartUpApplication'
 }
 
+
+task dist {
+    dependsOn clean, jlinkZip
+    description "Calls clean and then jlinkZip [default]"
+}
+
 [compileKotlin, compileTestKotlin].forEach {
     it.kotlinOptions {
         jvmTarget = '11'
@@ -40,11 +51,13 @@ application {
 
 javafx {
     version = '17'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.base','javafx.controls', 'javafx.fxml']
+    configuration = "compileOnly"
 }
 
 dependencies {
     implementation("org.openjfx:javafx-controls:17.0.2")
+    implementation("org.openjfx:javafx-media:17.0.2")
     implementation("org.openjfx:javafx-fxml:17.0.2")
     implementation 'io.github.palexdev:materialfx:11.13.9'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
@@ -55,13 +68,20 @@ test {
     useJUnitPlatform()
 }
 
+tasks.register("copyDependencies",Copy.class) {
+    from(configurations.runtimeClasspath).into("$buildDir/jmods")
+}
+
+tasks.register("copyJar",Copy.class) {
+    from(tasks.jar).into("$buildDir/jmods")
+}
+
 jlink {
     imageZip = project.file("${buildDir}/distributions/file2web-${javafx.platform.classifier}.zip")
     options = ['--strip-debug','--compress', '2', '--no-header-files', '--no-man-pages']
     targetPlatform("win") {
-        jdkHome = jdkDownload("https://download2.gluonhq.com/openjfx/19.0.2.1/openjfx-19.0.2.1_windows-x64_bin-sdk.zip")
-//        jdkHome = jdkDownload("https://download2.gluonhq.com/openjfx/19.0.2.1/openjfx-19.0.2.1_windows-x64_bin-jmods.zip")
-        addExtraModulePath("/usr/lib/openjfx/win/jmods")
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk17-binaries/releases/download/jdk-2021-05-07-13-31/OpenJDK-jdk_x64_windows_hotspot_2021-05-06-23-30.zip")
+        addExtraModulePath("${getRootDir()}/jmods/javafx-jmods-win-17.0.6")
     }
     launcher {
         name = 'File2Web'
