--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
     id "org.beryx.jlink" version "2.26.0"
 
-//    id "org.panteleyev.jpackageplugin" version "1.5.1"
+    id "org.panteleyev.jpackageplugin" version "1.5.1"
 
 
     id 'org.jetbrains.kotlin.jvm' version '1.6.20'
@@ -33,8 +33,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'br.andrew.cnabworker'
-    mainClass = 'br.andrew.cnabworker.StartUpApplication'
+    mainModule = 'br.andrew.file2web'
+    mainClass = 'br.andrew.file2web.StartUpApplication'
 }
 
 
